Fix card title align

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -60,10 +60,13 @@
   }
 
   &__name {
-    display: flex;
+    display: inline-flex;
+    /* stylelint-disable-next-line value-no-vendor-prefix */
+    display: -webkit-box;
     margin: 4px 0 0;
     overflow: hidden;
     color: $white;
+    text-align: center;
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
     line-clamp: 2;
